--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -23,8 +23,8 @@ spring:
        content-type: text/html
 
   datasource:
-      druid:
-        db-type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+        type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
         url: jdbc:mysql://localhost:3306/lazydsr-web-template?useUnicode=true&characterEncoding=utf-8&useSSL=false
         username: root
@@ -48,16 +48,5 @@ spring:
       hibernate:
           ddl-auto: update
       show-sql: true
-
-#使用开发时日志配置
 logging:
   config: classpath:config/logback-spring.xml
-#pagehelper分页插件
-#pagehelper:
-#    helperDialect: mysql
-#    reasonable: true
-#    supportMethodsArguments: true
-#    params: count=countSql
-#mybatis:
-#  mapper-locations: classpath:mapping/*.xml
-#  type-aliases-package: com.lazydsr.manager.po
