--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -1,8 +1,8 @@
 #server port
 server:
   port: 8000
-  servlet:
-    context-path: /manager
+#  servlet:
+#    context-path: /manager
 #spring:
 #  datasource:
 #    driver-class-name: com.mysql.jdbc.Driver
