--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>lazydsr-web-template</name>
+	<type>lazydsr-web-template</type>
 	<description></description>
 
 	<parent>
