添加服务器基础信息实体

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.lazydsr</groupId>
     <artifactId>lazydsr-web-template</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <description>lazydsr-web-template</description>
