--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.8</version>
+            <version>1.1.9</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -77,9 +77,9 @@
             <version>${lazydsr.util.version}</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.hyperic</groupId>-->
-            <!--<artifactId>sigar</artifactId>-->
-            <!--<version>1.6.4</version>-->
+        <!--<groupId>org.hyperic</groupId>-->
+        <!--<artifactId>sigar</artifactId>-->
+        <!--<version>1.6.4</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.fusesource</groupId>
@@ -100,13 +100,48 @@
         </dependency>
     </dependencies>
 
+    <!--<build>-->
+    <!--<plugins>-->
+    <!--<plugin>-->
+    <!--<groupId>org.springframework.boot</groupId>-->
+    <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+    <!--</plugin>-->
+    <!--</plugins>-->
+    <!--</build>-->
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                    <compilerArguments>
+                        <extdirs>${project.basedir}/lib</extdirs>
+                    </compilerArguments>
+                </configuration>
+            </plugin>
         </plugins>
+        <resources>
+            <!--<resource>-->
+                <!--<directory>${project.basedir}/lib</directory>-->
+                <!--<targetPath>BOOT-INF/lib/</targetPath>-->
+                <!--<includes>-->
+                    <!--<include>**/*</include>-->
+                <!--</includes>-->
+            <!--</resource>-->
+            <!--<resource>-->
+                <!--<directory>src/main/resources</directory>-->
+                <!--<targetPath>BOOT-INF/classes/</targetPath>-->
+            <!--</resource>-->
+        </resources>
+
     </build>
 
 
