--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -71,5 +71,5 @@ spring:
       hibernate:
           ddl-auto: update
       show-sql: true
-logging:
-  config: classpath:config/logback-spring.xml
+#logging:
+#  config: classpath:config/logback-spring.xml
