--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -76,6 +76,9 @@ pagehelper:
   reasonable: true
   supportMethodsArguments: true
   params: count=countSql
+logging:
+  level:
+    com.lazydsr.lazydsrwebtemplate.mapper: debug
 #  jpa:
 #      hibernate:
 #          ddl-auto: update
