继续添加菜单的功能项

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -18,7 +18,8 @@ spring:
      prefix: classpath:/templates/thymeleaf/
      suffix: .html
      encoding: UTF-8
-     mode: HTML5
+#     mode: HTML5
+     mode: LEGACYHTML5
      servlet:
        content-type: text/html
 
