--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -1,8 +1,8 @@
 #server port
 server:
-  port: 8000
-  servlet:
-    context-path: /manager
+  port: 80
+#  servlet:
+#    context-path: /manager
 #spring:
 #  datasource:
 #    driver-class-name: com.mysql.jdbc.Driver
@@ -18,7 +18,8 @@ spring:
      prefix: classpath:/templates/thymeleaf/
      suffix: .html
      encoding: UTF-8
-     mode: HTML5
+#     mode: HTML5
+     mode: LEGACYHTML5
      servlet:
        content-type: text/html
 
@@ -67,12 +68,24 @@ spring:
         filters: stat,wall,log4j2
         connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
         useGlobalDataSourceStat: true
-  jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
-        naming:
-            physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect #设置jpa的默认数据引擎为InnoDB
+mybatis:
+  configuration:
+   #配置项：开启下划线到驼峰的自动转换. 作用：将数据库字段根据驼峰规则自动注入到对象属性。
+   map-underscore-to-camel-case: true
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
 logging:
-  config: classpath:config/logback-spring.xml
+  level:
+    com.lazydsr.lazydsrwebtemplate.mapper: debug
+#  jpa:
+#      hibernate:
+#          ddl-auto: update
+#      show-sql: true
+#      naming:
+#          physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+#      database-platform: org.hibernate.dialect.MySQL5InnoDBDialect #设置jpa的默认数据引擎为InnoDB
+#logging:
+#  config: classpath:config/logback-spring.xml
