--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -80,6 +80,7 @@ pagehelper:
 logging:
   level:
     com.lazydsr.lazydsrwebtemplate.mapper: debug
+    org: warn
 #  jpa:
 #      hibernate:
 #          ddl-auto: update
