--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -46,28 +46,6 @@ spring:
         filters: stat,wall,log4j2
         connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
         useGlobalDataSourceStat: true
-    other:
-        name: otherDataSource
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/lazydsr-web-template?useUnicode=true&characterEncoding=utf-8&useSSL=false
-        username: root
-        password: root
-        initialSize: 5
-        minIdle: 5
-        maxActive: 20
-        maxWait: 60000
-        timeBetweenEvictionRunsMillis: 60000
-        minEvictableIdleTimeMillis: 300000
-        validationQuery: SELECT 1 FROM DUAL
-        testWhileIdle: true
-        testOnBorrow: false
-        testOnReturn: false
-        poolPreparedStatements: true
-        maxPoolPreparedStatementPerConnectionSize: 20
-        filters: stat,wall,log4j2
-        connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-        useGlobalDataSourceStat: true
 mybatis:
   configuration:
    #配置项：开启下划线到驼峰的自动转换. 作用：将数据库字段根据驼峰规则自动注入到对象属性。
@@ -80,7 +58,7 @@ pagehelper:
 logging:
   level:
     com.lazydsr.lazydsrwebtemplate.mapper: debug
-    org: warn
+    org: error
 #  jpa:
 #      hibernate:
 #          ddl-auto: update
