--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
             <!--<targetPath>BOOT-INF/classes/</targetPath>-->
             <!--</resource>-->
         </resources>
-
+        <defaultGoal>compile</defaultGoal>
     </build>
 
 
