--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,9 @@
             <!--<version>1.2.4</version>-->
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>com.github.pagehelper</groupId>-->
-            <!--<artifactId>pagehelper-spring-boot-autoconfigure</artifactId>-->
-            <!--<version>1.2.3</version>-->
+        <!--<groupId>com.github.pagehelper</groupId>-->
+        <!--<artifactId>pagehelper-spring-boot-autoconfigure</artifactId>-->
+        <!--<version>1.2.3</version>-->
         <!--</dependency>-->
         <!--mybatis相关 end-->
         <dependency>
@@ -111,27 +111,33 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <!--<dependency>&lt;!&ndash; 该依赖必加，里面有sping对schedule的支持 &ndash;&gt;-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-context-support</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.quartz-scheduler</groupId>-->
+            <!--<artifactId>quartz</artifactId>-->
+            <!--&lt;!&ndash;<version>2.2.1</version>&ndash;&gt;-->
+        <!--</dependency>-->
+        <!--quartz依赖-->
         <dependency>
-            <groupId>org.quartz-scheduler</groupId>
-            <artifactId>quartz</artifactId>
-            <!--<version>2.2.1</version>-->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>com.lazydsr</groupId>
             <artifactId>lazydsr-utils</artifactId>
             <version>${lazydsr.util.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.lazydsr</groupId>
-            <artifactId>lazydsr-commons</artifactId>
-            <version>1.1.0</version>
-        </dependency>
         <!--<dependency>-->
-        <!--<groupId>org.hyperic</groupId>-->
-        <!--<artifactId>sigar</artifactId>-->
-        <!--<version>1.6.4</version>-->
+            <!--<groupId>com.lazydsr</groupId>-->
+            <!--<artifactId>lazydsr-commons</artifactId>-->
+            <!--<version>1.1.0</version>-->
         <!--</dependency>-->
+
         <dependency>
             <groupId>org.fusesource</groupId>
             <artifactId>sigar</artifactId>
