--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -28,8 +28,8 @@ spring:
         name: mainDataSource
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
-#        url: jdbc:mysql://127.0.0.1:3306/lazydsr-web-template?useUnicode=true&characterEncoding=utf-8&useSSL=false
-        url: jdbc:mysql://172.25.60.118:3306/lazydsr-web-template?useUnicode=true&characterEncoding=utf-8&useSSL=false
+        url: jdbc:mysql://127.0.0.1:3306/lazydsr-web-template?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#        url: jdbc:mysql://172.25.60.118:3306/lazydsr-web-template?useUnicode=true&characterEncoding=utf-8&useSSL=false
         username: root
         password: root
         initialSize: 5
@@ -47,6 +47,18 @@ spring:
         filters: stat,wall,log4j2
         connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
         useGlobalDataSourceStat: true
+  redis:
+    database: 0
+    host: 192.168.2.201
+    port: 6379
+    password: root
+    timeout: 20s
+    jedis:
+      pool:
+        max-active: 100
+        max-wait: 10s
+        max-idle: 10
+        min-idle: 4
 mybatis:
   configuration:
    #配置项：开启下划线到驼峰的自动转换. 作用：将数据库字段根据驼峰规则自动注入到对象属性。
