--- a/src/main/resources/config/application-dev1.yml
+++ b/src/main/resources/config/application-dev1.yml
@@ -1,7 +1,8 @@
 #server port
 server:
-  port: 80
-
+  port: 8000
+  servlet:
+    context-path: /manager
 #spring:
 #  datasource:
 #    driver-class-name: com.mysql.jdbc.Driver
@@ -27,8 +28,8 @@ spring:
         name: mainDataSource
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://127.0.0.1:3306/lazydsr-web-template?useUnicode=true&characterEncoding=utf-8&useSSL=false
-#        url: jdbc:mysql://172.25.60.118:3306/lazydsr-web-template?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#        url: jdbc:mysql://127.0.0.1:3306/lazydsr-web-template?useUnicode=true&characterEncoding=utf-8&useSSL=false
+        url: jdbc:mysql://172.25.60.118:3306/lazydsr-web-template?useUnicode=true&characterEncoding=utf-8&useSSL=false
         username: root
         password: root
         initialSize: 5
@@ -48,7 +49,7 @@ spring:
         useGlobalDataSourceStat: true
   redis:
     database: 0
-    host: 192.168.2.201
+    host: 172.25.60.118
     port: 6379
     password: root
     timeout: 20s
